changed method findAllOrdersOfUser